package pb.message;

option java_package = "com.nettyserver.pb";
option optimize_for = SPEED;

message LoginInfo {
    optional int32 aid = 1;
    optional string passport = 2;
	optional string password = 3;
}

message LoginToken {
    optional string token = 1;
    optional string out_of_date = 2;
}
